--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "description": "Gatsby Demo - Recipes",
-  "author": "Rosellen, Peter",
   "keywords": [
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
+    "build": "cross-env NODE_OPTIONS=\"-r esm\" gatsby build",
+    "develop": "cross-env NODE_OPTIONS=\"-r esm\" gatsby develop",
+    "start": "npm run develop",
+    "serve": "cross-env NODE_OPTIONS=\"-r esm\" gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
@@ -25,9 +24,37 @@
     "gatsby-source-filesystem": "2.9.0",
     "gatsby-transformer-remark": "2.14.0",
     "gatsby-transformer-sharp": "2.10.0",
+    "isomorphic-fetch": "^2.2.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "6.1.0",
     "styled-components": "5.2.1"
-  }
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.8.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-wesbos": "1.0.0",
+    "eslint-plugin-html": "^6.1.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "esm": "^3.2.25",
+    "prettier": "^2.1.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/prosellen/gatsby-demo-recipes.git"
+  },
+  "author": "Peter Rosellen <peter.rosellen@outlook.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/prosellen/gatsby-demo-recipes/issues"
+  },
+  "homepage": "https://github.com/prosellen/gatsby-demo-recipes#readme"
 }
