--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "1.12.0",
+    "dotenv": "8.2.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "2.9.0",
+    "gatsby-plugin-image": "0.5.0",
     "gatsby-plugin-react-helmet": "3.8.0",
     "gatsby-plugin-sharp": "2.12.0",
     "gatsby-plugin-sitemap": "2.10.0",
@@ -29,6 +31,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "6.1.0",
+    "slugify": "1.4.6",
     "styled-components": "5.2.1"
   },
   "devDependencies": {
