Update email address

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "type": "git",
     "url": "git+https://git.ebsquared.de/eb2/eb2-gatsby-demo.git"
   },
-  "author": "Peter Rosellen <peter.rosellen@outlook.com>",
+  "author": "Peter Rosellen <peter.rosellen@cgi.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://git.ebsquared.de/eb2/eb2-gatsby-demo/issues"
